# DataPipelineEnv

./: Dockerfile  README.md  docker-compose.yml  inference.py  openenv.yaml  pyproject.toml  requirements.txt
app/: env.py  frontend.html  grader.py  main.py
app/schemas/: schema_hard.sql  schema_medium.sql
app/tasks/: __init__.py  easy.py  hard.py  medium.py
server/: app.py
tests/: __init__.py  conftest.py  test_env.py  test_grader.py  test_tasks.py
