[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "data-pipeline-env"
version = "1.0.0"
description = "OpenEnv for debugging data pipelines — CSV cleaning + SQL query fixing. Meta AI × Hugging Face OpenEnv Hackathon submission."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["openenv", "data-engineering", "sql", "csv", "debugging", "pandas", "sqlite", "fastapi"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pydantic>=2.6.0",
    "python-multipart>=0.0.9",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.scripts]
data-pipeline-env = "app.main:app"
serve = "server.app:app"

[project.urls]
Homepage = "https://huggingface.co/spaces/pete5002/DataPipelineEnv"
Repository = "https://github.com/peter-ananth/DataPipelineEnv"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
